--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 mongoengine==0.24.2
-motor==2.5.1
-pymong==4.3.3
+pymongo==4.3.3
